# livekit-plugins-munsit

./: .gitignore  README.md  pyproject.toml
docs/: munsit-docs-livekit-stt-plugin.md
examples/: .env.example  README.md  requirements.txt  stt_console_demo.py  stt_file_demo.py  voice_agent_demo.py
livekit/plugins/munsit/: __init__.py  _utils.py  log.py  models.py  stt.py
tests/: conftest.py  fake_munsit.py  test_munsit_stt.py
